Kiwi Fruit Started Rotating

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 									<h1>
 										Hello there
 										<br>
-										I'm Kiwi. <img src="images/kiwi.svg" class="icon-x" alt="">
+										I'm Kiwi. <img src="images/kiwi.svg" class="icon-x imageKiwi" alt="">
 									</h1>
 									<div class="description">
 										This should be used to tell a story and let your users know a little more about your product or service. How
