Subs form Updated to netlify

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 											<div class="cs-notifications">
 												<div class="cs-notifications-content"></div>
 											</div><!-- .cs-notifications end -->
-											<form id="form-cta-subscribe-3" class="form-inline">
+											<form id="" class="form-inline" netlify>
 												<div class="form-group">
 													<span class="field-icon"><img src="images/general-elements/field-icon-1.png" alt=""></span>
-													<input type="email" name="cs1Email" id="cs1Email" class="form-control" placeholder="Your Email Here">
-													<input type="submit" class="form-control" value="Call To Action">
+													<input type="email" name="email" class="form-control" placeholder="Your Email Here">
+													<input type="submit" class="form-control" value="Say Hello">
 												</div><!-- .form-group end -->
 											</form><!-- #form-cta-subscribe-3 end -->
 										</div><!-- .box-content end -->
