--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 											<div class="cs-notifications">
 												<div class="cs-notifications-content"></div>
 											</div><!-- .cs-notifications end -->
-											<form id="form-cta-subscribe-3" class="form-inline" netlify>
+											<form id="form-cta-subscribe-3" method="POST" class="form-inline" netlify>
 												<div class="form-group">
 													<span class="field-icon"><img src="images/general-elements/field-icon-1.png" alt=""></span>
 													<input type="email" name="email" class="form-control" placeholder="Your Email Here">
