--- a/index.html
+++ b/index.html
@@ -320,22 +320,22 @@
 									</div>
 									<div class="row">
 										<div class="col-md-4 col-sm-12 card">
-											<img class=" margin-10 shadow" src="images/files/01.jpg" alt="">
+											<img class="shadow" src="images/files/01.jpg" alt="">
 										</div>
 										<div class="col-md-4 col-sm-12 card">
-											<img class="margin-10 shadow" src="images/files/02.jpg" alt="">
+											<img class="shadow" src="images/files/02.jpg" alt="">
 										</div>
 										<div class="col-md-4 col-sm-12 card">
-											<img class=" margin-10 shadow" src="images/files/03.jpg" alt="">
+											<img class="shadow" src="images/files/03.jpg" alt="">
 										</div>
 										<div class="col-md-4 col-sm-12 card">
-											<img class=" margin-10 shadow" src="images/files/04.jpg" alt="">
+											<img class="shadow" src="images/files/04.jpg" alt="">
 										</div>
 										<div class="col-md-4 col-sm-12 card">
-											<img class=" margin-10 shadow" src="images/files/05.jpg" alt="">
+											<img class="shadow" src="images/files/05.jpg" alt="">
 										</div>
 										<div class="col-md-4 col-sm-12 card">
-											<img class=" margin-10 shadow" src="images/files/06.jpg" alt="">
+											<img class="shadow" src="images/files/06.jpg" alt="">
 										</div>
 									</div>
 								</div>
