Portfolio one row to two rows

--- a/index.html
+++ b/index.html
@@ -328,6 +328,8 @@
 										<div class="col-md-4 col-sm-12 card">
 											<img class="shadow" src="images/files/03.jpg" alt="">
 										</div>
+									</div>
+									<div class="row margin-top-3">
 										<div class="col-md-4 col-sm-12 card">
 											<img class="shadow" src="images/files/04.jpg" alt="">
 										</div>
