--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="fb:pages" content="765961286887306" />
     <link rel="shortcut icon" type="image/jpg" href="./favicon.ico" />
     <link rel="stylesheet" href="assets/css/styles.css">
 
