--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="fb:pages" content="765961286887306" />
     <meta property="og:title" content="Kiwiyaaa Online">
     <meta property="og:description" content="I'm Kiwi from Sri Lanka">
-    <meta property="og:image" content="assets/img/about.jpg">
+    <meta property="og:image" content="thumbnail.png">
     <link rel="shortcut icon" type="image/jpg" href="./favicon.ico" />
     <link rel="stylesheet" href="assets/css/styles.css">
 
