--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Kiwi</a>
+                <a href="#" class="nav__logo">
+                    <img src="logo.svg" alt="">
+                </a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
