--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer">
-        <p class="footer__title">Kiwi</p>
+        <p class="footer__title d-flex-center">
+            <img src="logo_white.svg" alt="">
+        </p>
         <div class="footer__social">
             <a href="https://www.instagram.com/kiwiyaaaa/" class="footer__icon"><i class='bx bxl-instagram'></i></a>
             <a href="https://www.facebook.com/kiwiyaaaa/" class="footer__icon"><i class='bx bxl-facebook'></i></a>
