--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         I'm a UI Designer and Front End Developer from Colombo Sri Lanka.
                         I enjoy taking complex problems and turning them into simple and beautiful interface designs. I
                         also love the logic and structure of coding and always strive to write elegant and efficient
-                        code, whether it be HTML, CSS or JQuery.
+                        code, whether it be HTML, CSS or JavaScript.
                         <br>
 
                     </p>
@@ -172,13 +172,13 @@
             <h2 class="section-title">Work</h2>
 
             <div class="work__container bd-grid">
-                <div class="work__img">
+                <div class="work__img" id="myBtn">
                     <img src="assets/img/work1.jpg" alt="">
                 </div>
-                <div class="work__img">
+                <div class="work__img" id="myBtn">
                     <img src="assets/img/work2.jpg" alt="">
                 </div>
-                <div class="work__img">
+                <div class="work__img" id="myBtn2">
                     <img src="assets/img/work3.jpg" alt="">
                 </div>
                 <div class="work__img">
@@ -222,10 +222,21 @@
     </footer>
 
 
-    <section>
-        <div id="tagid">
+
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <div class="modal__header">
+                <span class="close">&times;</span>
+            </div>
+            <p>Some text in the Modal..</p>
         </div>
-    </section>
+
+    </div>
+
     <!--===== SCROLL REVEAL =====-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
@@ -273,6 +284,40 @@
 
         ghApiCall('kiwizu3');
     </script>
+
+
+    <script>
+        // Get the modal
+        var modal = document.getElementById("myModal");
+
+        // Get the button that opens the modal
+        var btn = document.getElementById("myBtn");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        var btn2 = document.getElementById("myBtn2");
+        
+        console.log("btn", btn.id, btn2.id)
+        
+        // When the user clicks the button, open the modal 
+        btn.onclick = function () {
+            modal.style.display = "block";
+        }
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
+
 
     <!--===== MAIN JS =====-->
     <script src="assets/js/main.js"></script>
