--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 
             <div class="contact__container bd-grid">
                 <form action="#" class="contact__form" method="POST" name="contact-kiwi" data-netlify="true">
-                    <input type="text" placeholder="Name" class="contact__input">
-                    <input type="mail" placeholder="Email" class="contact__input">
-                    <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                    <input name="name" type="text" placeholder="Name" class="contact__input">
+                    <input name="email" type="email" placeholder="Email" class="contact__input">
+                    <textarea name="message" id="" cols="0" rows="10" class="contact__input"></textarea>
                     <input type="submit" value="Send" class="contact__button button">
                 </form>
             </div>
