--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <h2 class="section-title">Contact</h2>
 
             <div class="contact__container bd-grid">
-                <form action="#" class="contact__form" method="POST" name="contact-kiwi" data-netlify-recaptcha="true" data-netlify="true">
+                <form action="#" class="contact__form" method="POST" name="contact-kiwi"  data-netlify="true">
                     <input name="name" type="text" placeholder="Name" class="contact__input">
                     <input name="email" type="email" placeholder="Email" class="contact__input">
                     <textarea name="message" id="" cols="0" rows="10" class="contact__input"></textarea>
