Portfolio Link Attached

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                         also love the logic and structure of coding and always strive to write elegant and efficient
                         code, whether it be HTML, CSS or JavaScript.
                         <br>
+                        <br>
+                        <a class="view-button-portfolio" href="https://kavindafolio.carrd.co/" target="_blank">View</a> some stills I've done.
 
                     </p>
                 </div>
