Facebook Path Update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="home__social">
                 <a href="https://www.instagram.com/kiwiyaaaa/" class="home__social-icon"><i
                         class='bx bxl-instagram'></i></a>
-                <a href="https://www.facebook.com/kiwiyaaaa/" class="home__social-icon"><i
+                <a href="https://www.facebook.com/kiwiyaaa/" class="home__social-icon"><i
                         class='bx bxl-facebook'></i></a>
                 <a href="https://www.linkedin.com/in/kavindazue/" class="home__social-icon"><i
                         class='bx bxl-linkedin'></i></a>
@@ -217,7 +217,7 @@
         </p>
         <div class="footer__social">
             <a href="https://www.instagram.com/kiwiyaaaa/" class="footer__icon"><i class='bx bxl-instagram'></i></a>
-            <a href="https://www.facebook.com/kiwiyaaaa/" class="footer__icon"><i class='bx bxl-facebook'></i></a>
+            <a href="https://www.facebook.com/kiwiyaaa/" class="footer__icon"><i class='bx bxl-facebook'></i></a>
             <a href="https://www.linkedin.com/in/kavindazue/" class="footer__icon"><i class='bx bxl-linkedin'></i></a>
         </div>
         <p>&#169; 2021 copyright all right reserved</p>
