--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                         <a href="https://www.linkedin.com/in/kavindazue/" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-                        <a href="https://instagram.com/kiwiyaaa" target="_blank"
-                            class="home__social-icon">
+                        <a href="https://instagram.com/kiwiyaaa" target="_blank" class="home__social-icon">
                             <i class="fa fa-instagram"></i>
                         </a>
                         <a href="https://github.com/kiwizu3" target="_blank" class="home__social-icon">
@@ -760,7 +759,7 @@
                         </div>
                     </div>
 
-                    <form action="#" method="POST" class="contact__form grid" name="contact-kiwi"  data-netlify="true">
+                    <form action="#" method="POST" class="contact__form grid" name="contact-kiwi" data-netlify="true">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="name" class="contact__label">Name</label>
@@ -784,8 +783,9 @@
                         </div>
 
                         <div>
-                            <a href="#" class="button button--flex">Send Message <i
-                                    class="uil uil-message button__icon"></i></a>
+                            <button  type="submit"  class="button button--flex send__button">
+                              Send Message<i class="uil uil-message button__icon"></i>
+                            </button>
                         </div>
                     </form>
                 </div>
