Contact Form Update

--- a/index.html
+++ b/index.html
@@ -759,27 +759,27 @@
                         </div>
                     </div>
 
-                    <form action="#" method="POST" class="contact__form grid" name="contact-kiwi" data-netlify="true">
+                    <form action="#" method="POST" class="contact__form grid" name="contact-kiwi-form" data-netlify="true">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="name" class="contact__label">Name</label>
-                                <input type="text" id="name" class="contact__input">
+                                <input name="name" type="text" id="name" class="contact__input">
                             </div>
 
                             <div class="contact__content">
                                 <label for="email" class="contact__label">Email</label>
-                                <input type="email" id="email" class="contact__input">
+                                <input name="email" type="email" id="email" class="contact__input">
                             </div>
                         </div>
 
                         <div class="contact__content">
                             <label for="project-contact" class="contact__label">Project</label>
-                            <input type="text" id="project-contact" class="contact__input">
+                            <input name="project" type="text" id="project-contact" class="contact__input">
                         </div>
 
                         <div class="contact__content">
                             <label for="message-contact" class="contact__label">Message</label>
-                            <textarea name="" cols="0" rows="7" id="message-contact" class="contact__input"></textarea>
+                            <textarea name="message" cols="0" rows="7" id="message-contact" class="contact__input"></textarea>
                         </div>
 
                         <div>
