Form Updates : required fields

--- a/index.html
+++ b/index.html
@@ -763,18 +763,18 @@
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="name" class="contact__label">Name</label>
-                                <input name="name" type="text" id="name" class="contact__input">
+                                <input name="name" type="text" id="name" class="contact__input" required>
                             </div>
 
                             <div class="contact__content">
                                 <label for="email" class="contact__label">Email</label>
-                                <input name="email" type="email" id="email" class="contact__input">
+                                <input name="email" type="email" id="email" class="contact__input" required>
                             </div>
                         </div>
 
                         <div class="contact__content">
                             <label for="project-contact" class="contact__label">Project</label>
-                            <input name="project" type="text" id="project-contact" class="contact__input">
+                            <input name="project" type="text" id="project-contact" class="contact__input" required>
                         </div>
 
                         <div class="contact__content">
