--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        I'm a UI Designer and Front End Developer from Colombo Sri Lanka.
+                        I'm a UI Designer and a Front End Developer from Colombo Sri Lanka.
                         I enjoy taking complex problems and turning them into simple and beautiful interface designs. I
                         also love the logic and structure of coding and always strive to write elegant and efficient
                         code, whether it be HTML, CSS or JavaScript.
@@ -189,7 +189,7 @@
                             <i class="uil uil-brush-alt skills__icon"></i>
 
                             <div>
-                                <h1 class="skills__title">Graphic Deisgning</h1>
+                                <h1 class="skills__title">Graphic Designing</h1>
                                 <span class="skills__subtitle">More than 5 years</span>
                             </div>
 
@@ -383,7 +383,7 @@
 
                             <div>
                                 <h3 class="qualification__title">GCE OL & GCE AL</h3>
-                                <span class="qualification__subtitle">Kingswod College</span>
+                                <span class="qualification__subtitle">Kingswood College</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     Mar, 2007 - Sept, 2015
@@ -846,9 +846,8 @@
     </a>
 
     <script>
-        var date = new Date();
-        var today = date.getMonth() + 1;
-        document.getElementById("demo").innerHTML = today;
+        const date = new Date().getDate();
+        document.getElementById("demo").innerHTML = date;
     </script>
     <!--==================== SWIPER JS ====================-->
     <script src="assets/js/swiper-bundle.min.js"></script>
