Color changes in the links

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                             <div>
                                 <h3 class="qualification__title">Front End Developer</h3>
                                 <span class="qualification__subtitle">
-                                    <a href="https://getshoutout.com/" target="_blank">ShoutOUT Labs</a>
+                                    <a class="active-link" href="https://getshoutout.com/" target="_blank">ShoutOUT Labs</a>
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -444,7 +444,7 @@
                             <div>
                                 <h3 class="qualification__title">IT Executive (Administration)</h3>
                                 <span class="qualification__subtitle">
-                                    <a href="https://lmd.lk/" target="_blank">Media Services (Pvt) Ltd.</a>
+                                    <a class="active-link" href="https://lmd.lk/" target="_blank">Media Services</a>
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -459,7 +459,7 @@
                             <div>
                                 <h3 class="qualification__title">UI Engineer Intern</h3>
                                 <span class="qualification__subtitle">
-                                    <a href="https://www.lunahlabs.com/" target="_blank">Unipoint, Sri Lanka</a>
+                                    <a class="active-link" href="https://www.lunahlabs.com/" target="_blank">Unipoint</a>
                                     <!-- <small>(A subsidiary of Robi Axiata Limited)</small> -->
                                 </span>
                                 <div class="qualification__calendar">
