--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title">Hello from Kiwi</h1>
-                        <h3 class="home__subtitle">Designer</h3>
+                        <h3 class="home__subtitle">Designer Developer</h3>
                         <p class="home__description">High level experience in web application development and producing
                             designs.</p>
                         <a href="#contact" class="button button--flex">
