About me update

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         I'm a UI Designer and a Front End Developer from Colombo Sri Lanka.
                         I enjoy taking complex problems and turning them into simple and beautiful interface designs. I
                         also love the logic and structure of coding and always strive to write elegant and efficient
-                        code, whether it be HTML, CSS or JavaScript.
+                        code.
                         <br>
                         <br>
                         <a class="view-button-portfolio  active-link" href="https://kavindafolio.carrd.co/"
