Removed ShoutOUT Helpdesk

--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
     </script>
     
    
-    <script>
+<!--     <script>
       (function(d,t) {
         var BASE_URL="https://helpdesk.shoutout.ai";
         var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
@@ -864,7 +864,7 @@
           })
         }
       })(document,"script");
-    </script>
+    </script> -->
     
     <!--==================== SWIPER JS ====================-->
     <script src="assets/js/swiper-bundle.min.js"></script>
