--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!--=============== BOXICONS ===============-->
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+
     <!--==================== SWIPER CSS ====================-->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/nav.css">
 
     <title>Kiwi is here</title>
 </head>
@@ -20,54 +25,57 @@
 <body>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
+
         <nav class="nav container">
             <a href="#" class="nav__logo">
                 <img src="logo.svg" alt="">
             </a>
-            <div class="nav__menu" id="nav-menu">
-                <ul class="nav__list grid">
+            <!-- <a href="#" class="nav__logo">
+                <img src="logo.svg" alt="">
+            </a> -->
+
+
+            <div class="nav__menu">
+                <ul class="nav__list">
                     <li class="nav__item">
                         <a href="#home" class="nav__link active-link">
-                            <i class="uil uil-estate nav__icon"></i> Home
+                            <i class='bx bx-home-alt'></i>
                         </a>
                     </li>
+
                     <li class="nav__item">
                         <a href="#about" class="nav__link">
-                            <i class="uil uil-user nav__icon"></i> About
+                            <i class='bx bx-user'></i>
                         </a>
                     </li>
+
                     <li class="nav__item">
                         <a href="#skills" class="nav__link">
-                            <i class="uil uil-file-alt nav__icon"></i> Skills
+                            <i class='bx bx-book'></i>
                         </a>
                     </li>
+
                     <li class="nav__item">
                         <a href="#services" class="nav__link">
-                            <i class="uil uil-briefcase-alt nav__icon"></i> Services
+                            <i class='bx bx-briefcase-alt-2'></i>
                         </a>
                     </li>
-                    <li class="nav__item">
+
+                    <!-- <li class="nav__item">
                         <a href="#portfolio" class="nav__link">
-                            <i class="uil uil-scenery nav__icon"></i> Portfolio
+                            <i class='bx bx-briefcase-alt-2'></i>
                         </a>
-                    </li>
+                    </li> -->
+
                     <li class="nav__item">
                         <a href="#contact" class="nav__link">
-                            <i class="uil uil-estate nav__icon"></i> Contact
+                            <i class='bx bx-message-square-detail'></i>
                         </a>
                     </li>
                 </ul>
-                <i class="uil uil-times nav__close" id="nav-close"></i>
             </div>
 
-            <div class="nav__btns">
-                <!--Theme change button-->
-                <i class="uil uil-moon change-theme" id="theme-button"></i>
-
-                <div class="nav__toggle" id="nav-toggle">
-                    <i class="uil uil-apps"></i>
-                </div>
-            </div>
+            <i class='bx bx-moon change-theme' id="theme-button"></i>
         </nav>
     </header>
 
@@ -145,7 +153,7 @@
                         code.
                         <br>
                         <br>
-                        <a class="view-button-portfolio  active-link" href="https://kavindafolio.carrd.co/"
+                        <a class="view-button-portfolio  active-link-alt" href="https://kavindafolio.carrd.co/"
                             target="_blank"><strong>View</strong></a> some stills I've done.
                     </p>
 
@@ -167,7 +175,7 @@
                     </div>
                     <div class="about__buttons">
                         <a download="Kiwiyaaa's CV" target="_blank" href="assets/pdf/kiwiyaaa.pdf"
-                            class="button button--flex">
+                            class="button button--ghost">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -418,7 +426,8 @@
                             <div>
                                 <h3 class="qualification__title">Front End Developer</h3>
                                 <span class="qualification__subtitle">
-                                    <a class="active-link" href="https://getshoutout.com/" target="_blank">ShoutOUT Labs</a>
+                                    <a class="active-link-alt" href="https://getshoutout.com/" target="_blank">ShoutOUT
+                                        Labs</a>
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -444,7 +453,7 @@
                             <div>
                                 <h3 class="qualification__title">IT Executive (Administration)</h3>
                                 <span class="qualification__subtitle">
-                                    <a class="active-link" href="https://lmd.lk/" target="_blank">Media Services</a>
+                                    <a class="active-link-alt" href="https://lmd.lk/" target="_blank">Media Services</a>
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -459,7 +468,8 @@
                             <div>
                                 <h3 class="qualification__title">UI Engineer Intern</h3>
                                 <span class="qualification__subtitle">
-                                    <a class="active-link" href="https://www.lunahlabs.com/" target="_blank">Unipoint</a>
+                                    <a class="active-link-alt" href="https://www.lunahlabs.com/"
+                                        target="_blank">Unipoint</a>
                                     <!-- <small>(A subsidiary of Robi Axiata Limited)</small> -->
                                 </span>
                                 <div class="qualification__calendar">
@@ -759,7 +769,8 @@
                         </div>
                     </div>
 
-                    <form action="#" method="POST" class="contact__form grid" name="contact-kiwi-form" data-netlify="true">
+                    <form action="#" method="POST" class="contact__form grid" name="contact-kiwi-form"
+                        data-netlify="true">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="name" class="contact__label">Name</label>
@@ -779,12 +790,13 @@
 
                         <div class="contact__content">
                             <label for="message-contact" class="contact__label">Message</label>
-                            <textarea name="message" cols="0" rows="7" id="message-contact" class="contact__input"></textarea>
+                            <textarea name="message" cols="0" rows="7" id="message-contact"
+                                class="contact__input"></textarea>
                         </div>
 
                         <div>
-                            <button  type="submit"  class="button button--flex send__button">
-                              Send Message<i class="uil uil-message button__icon"></i>
+                            <button type="submit" class="button button--flex send__button">
+                                Send Message<i class="uil uil-message button__icon"></i>
                             </button>
                         </div>
                     </form>
@@ -849,9 +861,9 @@
         const date = new Date().getDate();
         document.getElementById("demo").innerHTML = date;
     </script>
-    
-   
-<!--     <script>
+
+
+    <!--     <script>
       (function(d,t) {
         var BASE_URL="https://helpdesk.shoutout.ai";
         var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
@@ -865,7 +877,7 @@
         }
       })(document,"script");
     </script> -->
-    
+
     <!--==================== SWIPER JS ====================-->
     <script src="assets/js/swiper-bundle.min.js"></script>
 
