Added Dev work main page link and image location updates

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nav.css">
 
-    <title>Kiwi is here</title>
+    <title>Kiwi is here 🥝</title>
 </head>
 
 <body>
@@ -183,6 +183,117 @@
             </div>
 
         </section>
+
+
+        <!--==================== DEV PORTFOLIO ====================-->
+        <section class="portfolio section" id="portfolio">
+            <h2 class="section__title">Development Portfolio</h2>
+            <span class="section__subtitle">Most Recent Web Apps</span>
+
+            <div class="portfolio__container container swiper-container">
+                <div class="swiper-wrapper">
+                    <!--======================== PORTFOLIO 1 =============-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/web/web-1.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Go Home Gota 2022</h3>
+                            <p class="portfolio__description">
+                                A web page for #gotagohome protest.
+                            </p>
+                            <a href="https://ghg.vercel.app" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                <!-- <i class="uil uil-play button__icon__play"></i> -->
+                                Visit
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--======================== PORTFOLIO 2 =============-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/web/web-2.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Dia Bot Mock App</h3>
+                            <p class="portfolio__description">
+                                Web app for a voice assistant of a telco company.
+                            </p>
+                            <a href="https://diabot.vercel.app/" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                <!-- <i class="uil uil-play button__icon__play"></i> -->
+                                Visit
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <!--======================== PORTFOLIO 3 =============-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/web/web-3.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">The Ceylon Curry House</h3>
+                            <p class="portfolio__description">
+                                Digital restaurant menu.
+                            </p>
+                            <a href="https://theceyloncurryhouse.netlify.app/index_v2.html" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                <!-- <i class="uil uil-play button__icon__play"></i> -->
+                                Visit
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--======================== PORTFOLIO 4 =============-->
+                    <!-- <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/work4.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">GTA 5 | The Destination</h3>
+                            <p class="portfolio__description">
+                                        This is test description(3) right now.
+                                    </p>
+                            <a href="https://fb.watch/7YRxlAvVio/" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                <i class="uil uil-play button__icon__play"></i>
+                                Watch
+                            </a>
+                        </div>
+                    </div> -->
+
+
+
+                    <!--======================== PORTFOLIO 5 =============-->
+                    <!-- <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/work5.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Valorant Fracture Map Run</h3>
+                            <p class="portfolio__description">
+                                        This is test description(3) right now.
+                                    </p>
+                            <a href="https://fb.watch/7YS7wbWtsd/"
+                                class="button button--flex button--small portfolio__button">
+                                <i class="uil uil-play button__icon__play"></i>
+                                Watch
+                            </a>
+                        </div>
+                    </div> -->
+
+                </div>
+                <!--============ Add Arrows =============-->
+                <div class="swiper-button-next">
+                    <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                    <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+                </div>
+
+                <!--============ Add Pagination =============-->
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
+
 
         <!--==================== SKILLS ====================-->
         <section class="skills section" id="skills">
@@ -601,6 +712,7 @@
             </div>
         </section>
 
+
         <!--==================== PORTFOLIO ====================-->
         <section class="portfolio section" id="portfolio">
             <h2 class="section__title">Motion Portfolio</h2>
@@ -610,7 +722,7 @@
                 <div class="swiper-wrapper">
                     <!--======================== PORTFOLIO 1 =============-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/work1.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/work/work1.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">The World on Adobe XD</h3>
@@ -627,14 +739,14 @@
 
                     <!--======================== PORTFOLIO 2 =============-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/work2.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/work/work2.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Dropped myself into a jungle</h3>
                             <!-- <p class="portfolio__description">
                                 This is test description(3) right now.
                             </p> -->
-                            <a href="https://fb.watch/7YQP3RcEpK/"
+                            <a href="https://fb.watch/7YQP3RcEpK/" target="_blank"
                                 class="button button--flex button--small portfolio__button">
                                 <i class="uil uil-play button__icon__play"></i>
                                 Watch
@@ -645,7 +757,7 @@
 
                     <!--======================== PORTFOLIO 3 =============-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/work3.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/work/work3.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Valentine's Drawing</h3>
@@ -662,7 +774,7 @@
 
                     <!--======================== PORTFOLIO 4 =============-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/work4.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/work/work4.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">GTA 5 | The Destination</h3>
@@ -681,14 +793,14 @@
 
                     <!--======================== PORTFOLIO 5 =============-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/work5.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/work/work5.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Valorant Fracture Map Run</h3>
                             <!-- <p class="portfolio__description">
                                 This is test description(3) right now.
                             </p> -->
-                            <a href="https://fb.watch/7YS7wbWtsd/"
+                            <a href="https://fb.watch/7YS7wbWtsd/" target="_blank"
                                 class="button button--flex button--small portfolio__button">
                                 <i class="uil uil-play button__icon__play"></i>
                                 Watch
