--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <p class="portfolio__description">
                                 Web app for a voice assistant of a telco company.
                             </p>
-                            <a href="https://diabot.vercel.app/" target="_blank"
+                            <a href="https://diabot.vercel.app/"
                                 class="button button--flex button--small portfolio__button">
                                 <!-- <i class="uil uil-play button__icon__play"></i> -->
                                 Visit
@@ -236,7 +236,7 @@
                             <p class="portfolio__description">
                                 Digital restaurant menu.
                             </p>
-                            <a href="https://theceyloncurryhouse.netlify.app/index_v2.html" target="_blank"
+                            <a href="https://theceyloncurryhouse.netlify.app/index_v2.html" 
                                 class="button button--flex button--small portfolio__button">
                                 <!-- <i class="uil uil-play button__icon__play"></i> -->
                                 Visit
@@ -746,7 +746,7 @@
                             <!-- <p class="portfolio__description">
                                 This is test description(3) right now.
                             </p> -->
-                            <a href="https://fb.watch/7YQP3RcEpK/" target="_blank"
+                            <a href="https://fb.watch/7YQP3RcEpK/"
                                 class="button button--flex button--small portfolio__button">
                                 <i class="uil uil-play button__icon__play"></i>
                                 Watch
@@ -764,7 +764,7 @@
                             <!-- <p class="portfolio__description">
                                 This is test description(2) right now.
                             </p> -->
-                            <a href="https://fb.watch/7YRg4BqQU3/" target="_blank"
+                            <a href="https://fb.watch/7YRg4BqQU3/"
                                 class="button button--flex button--small portfolio__button">
                                 <i class="uil uil-play button__icon__play"></i>
                                 Watch
@@ -781,7 +781,7 @@
                             <!-- <p class="portfolio__description">
                                 This is test description(3) right now.
                             </p> -->
-                            <a href="https://fb.watch/7YRxlAvVio/" target="_blank"
+                            <a href="https://fb.watch/7YRxlAvVio/" 
                                 class="button button--flex button--small portfolio__button">
                                 <i class="uil uil-play button__icon__play"></i>
                                 Watch
@@ -800,7 +800,7 @@
                             <!-- <p class="portfolio__description">
                                 This is test description(3) right now.
                             </p> -->
-                            <a href="https://fb.watch/7YS7wbWtsd/" target="_blank"
+                            <a href="https://fb.watch/7YS7wbWtsd/"
                                 class="button button--flex button--small portfolio__button">
                                 <i class="uil uil-play button__icon__play"></i>
                                 Watch
