--- a/journeys/index.html
+++ b/journeys/index.html
@@ -24,7 +24,7 @@
   <!-- PERFORMANCE -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
   <link rel="preload" as="style" href="style.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <!-- TITLE -->
   <title>Kiwi is here 🥝 | Journeys</title>
 </head>
@@ -38,10 +38,10 @@
           <!-- <svg viewBox="0 0 18 18" height="18" width="18" role="img" aria-label="#">
             <path fill="#353535" d="M0 0h4.5v9a4.5 4.5 0 109 0V6H18v3A9 9 0 110 9V0zm18 4.5V0h-4.5v4.5H18z" />
           </svg> -->
-          <img src="assets/logo.svg" alt="logo">
+          <img src="./assets/logo.svg" alt="logo">
         </a>
         <!-- MENU -->
-        <a href="#" role="link" aria-label="#">
+        <a href="https://twitter.com/kiwiyaaaa" role="link" aria-label="#">
           <svg viewBox="0 0 24 24" height="18" width="18" fill="none" stroke="#353535" stroke-linecap="round"
             stroke-linejoin="round" stroke-width="2" role="img" aria-label="#">
             <path
@@ -64,13 +64,13 @@
             <!-- APP STORE -->
             <a href="#" role="link" aria-label="#"
               class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-              <img src="assets/youtube.svg" />
+              <img src="./assets/youtube.svg" />
               <!-- <span>Watch</span> -->
             </a>
             <!-- PLAY STORE -->
             <a href="#" role="link" aria-label="#"
               class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-              <img src="assets/tiktok.svg" />
+              <img src="./assets/tiktok.svg" />
               <!-- <span>Watch</span> -->
             </a>
           </div>
@@ -180,11 +180,11 @@
     <div class="ui-layout-container">
       <div class="ui-section-footer__layout ui-layout-flex">
         <!-- COPYRIGHT -->
-        <p class="ui-section-footer--copyright ui-text-note"><small>&copy; 0000 Uisual</small></p>
+        <p class="ui-section-footer--copyright ui-text-note"><small>&copy; Kiwiyaaa. All rights reserved.</small></p>
         <!-- MENU -->
-        <a href="#" role="link" aria-label="#" class="ui-text-note"><small>Features</small></a>
-        <a href="#" role="link" aria-label="#" class="ui-text-note"><small>Help</small></a>
-        <a href="#" role="link" aria-label="#" class="ui-text-note"><small>Terms</small></a>
+        <!-- <a href="#" role="link" aria-label="#" class="ui-text-note"><small>Features</small></a>
+        <a href="#" role="link" aria-label="#" class="ui-text-note"><small>Help</small></a> -->
+        <a href="../index.html" role="link" aria-label="#" class="ui-text-note"><small>Home</small></a>
       </div>
     </div>
   </footer>
