--- a/journeys/index.html
+++ b/journeys/index.html
@@ -5,26 +5,24 @@
   <!-- META -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="uisual" content="Made with Uisual (uisual.com)">
   <meta name="author" content="#">
   <meta name="description" content="#">
   <meta name="referrer" content="unsafe-url">
   <meta name="robots" content="index, follow">
   <!-- SPEED -->
-  <link rel="preconnect" href="https://res.cloudinary.com">
+  <!-- <link rel="preconnect" href="https://res.cloudinary.com">
   <link rel="dns-prefetch" href="https://res.cloudinary.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com"> -->
   <!-- LINK -->
-  <link rel="me" href="#">
   <link rel="canonical" href="#">
   <link rel="icon" type="image/png" href="#" sizes="48x48">
   <!-- PERFORMANCE -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
-  <link rel="preload" as="style" href="style.css">
-  <link rel="stylesheet" href="./style.css">
+  <!-- <link rel="preload" as="style" href="style.css"> -->
+  <link rel="stylesheet" href="style.css">
   <!-- TITLE -->
   <title>Kiwi is here 🥝 | Journeys</title>
 </head>
@@ -38,7 +36,7 @@
           <!-- <svg viewBox="0 0 18 18" height="18" width="18" role="img" aria-label="#">
             <path fill="#353535" d="M0 0h4.5v9a4.5 4.5 0 109 0V6H18v3A9 9 0 110 9V0zm18 4.5V0h-4.5v4.5H18z" />
           </svg> -->
-          <img src="./assets/logo.svg" alt="logo">
+          <img src="assets/logo.svg" alt="logo">
         </a>
         <!-- MENU -->
         <a href="https://twitter.com/kiwiyaaaa" role="link" aria-label="#">
@@ -64,13 +62,13 @@
             <!-- APP STORE -->
             <a href="#" role="link" aria-label="#"
               class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-              <img src="./assets/youtube.svg" />
+              <img src="assets/youtube.svg" />
               <!-- <span>Watch</span> -->
             </a>
             <!-- PLAY STORE -->
             <a href="#" role="link" aria-label="#"
               class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-              <img src="./assets/tiktok.svg" />
+              <img src="assets/tiktok.svg" />
               <!-- <span>Watch</span> -->
             </a>
           </div>
