--- a/index.html
+++ b/index.html
@@ -192,6 +192,25 @@
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
+
+
+                     <!--======================== PORTFOLIO 0 =============-->
+                     <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/web/web-0.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">English to Gibberish</h3>
+                            <p class="portfolio__description">
+                                An online translator for gibberish
+                            </p>
+                            <a href="https://kiwis-gibberish.vercel.app/" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                <!-- <i class="uil uil-play button__icon__play"></i> -->
+                                Visit
+                            </a>
+                        </div>
+                    </div>
+
                     <!--======================== PORTFOLIO 1 =============-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/web/web-1.png" alt="" class="portfolio__img">
@@ -208,6 +227,8 @@
                             </a>
                         </div>
                     </div>
+
+
 
                     <!--======================== PORTFOLIO 2 =============-->
                     <div class="portfolio__content grid swiper-slide">
@@ -859,7 +880,7 @@
 
                         <div>
                             <h3 class="contact__title">Call Me</h3>
-                            <span class="contact__subtitle">+9471 050 6378</span>
+                            <span class="contact__subtitle">+9477 037 0909</span>
                         </div>
                     </div>
 
