--- a/expeditions/index.html
+++ b/expeditions/index.html
@@ -10,19 +10,19 @@
   <meta name="referrer" content="unsafe-url">
   <meta name="robots" content="index, follow">
   <!-- SPEED -->
-  <!-- <link rel="preconnect" href="https://res.cloudinary.com">
+  <link rel="preconnect" href="https://res.cloudinary.com">
   <link rel="dns-prefetch" href="https://res.cloudinary.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="dns-prefetch" href="https://fonts.gstatic.com"> -->
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
   <!-- LINK -->
   <link rel="canonical" href="#">
   <link rel="icon" type="image/png" href="#" sizes="48x48">
   <!-- PERFORMANCE -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
-  <!-- <link rel="preload" as="style" href="style.css"> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="preload" as="style" href="custom.css">
+  <link rel="stylesheet" href="custom.css">
   <!-- TITLE -->
   <title>Kiwi is here 🥝 | Journeys</title>
 </head>
