--- a/index.html
+++ b/index.html
@@ -482,20 +482,21 @@
 
             <div class="qualification__container container">
                 <div class="qualification__tabs">
-                    <div class="qualification__button button--flex qualification__active" data-target="#education">
-                        <i class="uil uil-graduation-cap qualification__icon"></i>
-                        Education
-                    </div>
-
-                    <div class="qualification__button button--flex" data-target="#work">
+                
+                    <div class="qualification__button button--flex qualification__active" data-target="#work">
                         <i class="uil uil-briefcase-alt qualification__icon"></i>
                         Work
+                    </div>
+
+                    <div class="qualification__button button--flex" data-target="#education">
+                        <i class="uil uil-graduation-cap qualification__icon"></i>
+                        Education
                     </div>
                 </div>
 
                 <div class="qualification__sections">
                     <!--===============================QUALIFICATION CONTENT 1 ===========================-->
-                    <div class="qualification__content qualification__active" data-content id="education">
+                    <div class="qualification__content" data-content id="education">
                         <!--===============================QUALIFICATION 1 ===========================-->
                         <div class="qualification__data">
                             <div>
@@ -552,7 +553,26 @@
                     </div>
 
                     <!--===============================QUALIFICATION CONTENT 2 ===========================-->
-                    <div class="qualification__content" data-content id="work">
+                    <div class="qualification__content qualification__active" data-content id="work">
+                       
+                         <!--===============================QUALIFICATION 0 ===========================-->
+                         <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__title">Product Manager</h3>
+                                <span class="qualification__subtitle">
+                                    <a class="active-link-alt" href="https://imigames.io/" target="_blank">IMI Games</a>
+                                </span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    July, 2022 - Running
+                                </div>
+                            </div>
+                        </div>
                         <!--===============================QUALIFICATION 1 ===========================-->
                         <div class="qualification__data">
                             <div>
@@ -563,7 +583,7 @@
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    July, 2018 - Running
+                                    July, 2018 - July, 2022
                                 </div>
                             </div>
 
